Closed Bug 136210 Opened 24 years ago Closed 24 years ago

cannot view any https urls when memory cache size is set to 0

Categories

(Core :: Networking: Cache, defect, P3)

x86
Windows 2000
defect

Tracking

()

VERIFIED FIXED
mozilla1.0.1

People

(Reporter: aberger, Assigned: darin.moz)

References

()

Details

(Keywords: relnote, Whiteboard: [adt2 RTM])

Attachments

(1 file)

From Bugzilla Helper: User-Agent: Mozilla/4.0 (compatible; MSIE 5.5; Windows NT 5.0) BuildID: .9.9 If I change my cache options to 0K available for memory cache, I cannot view any https pages. (Note: if I set BOTH memory and disk cache to 0K, I CAN view the page ?!?) Reproducible: Always Steps to Reproduce: 1. Set memory cache size to 0K 2. View https://208.185.86.81/ari/byterange/byterange.txt 3. Actual Results: I don't see the page
-> PSM
Assignee: new-network-bugs → ssaux
Component: Networking → Client Library
Product: Browser → PSM
QA Contact: benc → junruh
Version: other → unspecified
Confirming.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: nsbeta1
Priority: -- → P3
The trick for reproducing is indeed to have "memory cache => zero, disk cache => not zero". I see the problem, too. I don't have an immediate idea how this could be a bug in PSM. Will need to debug. Gagan, do you have an idea what could cause this? Note: We are using I/O layering to implement https.
this seems bad. cc'ing gordon-- maybe we should have a minimum mem-cache size that prevents these problems.
*** Bug 136380 has been marked as a duplicate of this bug. ***
I suggest we make this nsbeta1+. Nominating for release note.
Keywords: relnote
Relnote: If you set the memory cache to 0, you should set the disk cache to 0 also, or you will not be able to view https:// (secure) web sites.
*** Bug 139746 has been marked as a duplicate of this bug. ***
Several users have run into this bug, and the workaround is not obvious. Gordon, the crypto team is requesting your help on this one, since they don't have time for a proper fix. The bug is that if memory cache is set to 0, and disk cache is not set to 0, then the user cannot visit https sites. We are hoping that you could change the cache preferences UI so that memory cache cannot be set to 0 if disk cache is also not set to 0.
Version: unspecified → 2.3
Hmmm.... Gordon is away on sabbatical. Darin might be able to take a look into this.
*** Bug 147388 has been marked as a duplicate of this bug. ***
hmm... so it seems that the HTTP module isn't properly falling back on no caching in this case. reassigning to Networking:HTTP
Assignee: ssaux → darin
Component: Client Library → Networking: HTTP
Product: PSM → Browser
QA Contact: junruh → tever
Target Milestone: --- → mozilla1.0.1
Version: 2.3 → other
ok, after some investigation the problem appears to be that the cache is not enforcing storage policy when opening a cache entry. given a memory cache only cache session, it still gives out cache entries. that is incorrect... it should error out. if it errored out then we would proceed without using the cache.
Component: Networking: HTTP → Networking: Cache
Attached patch v1 patchSplinter Review
this patch adds an additional check to nsCacheService::ActivateEntry to verify that storage is available to satisfy the cache request.
Comment on attachment 85704 [details] [diff] [review] v1 patch r=beard
Attachment #85704 - Flags: review+
fixed-on-trunk
Status: NEW → ASSIGNED
Keywords: adt1.0.1
Whiteboard: [adt2 RTM]
Comment on attachment 85704 [details] [diff] [review] v1 patch please check into the 1.0.1 branch ASAP. once landed remove the mozilla1.0.1+ keyword and add the fixed1.0.1 keyword
Attachment #85704 - Flags: approval+
Whiteboard: [adt2 RTM] → [adt2 RTM][fixed trunk]
set mem cache to 0 and was able to view page. verified trunk - 06/04/02 builds, winNT4, linux rh6, mac osX
Whiteboard: [adt2 RTM][fixed trunk] → [adt2 RTM][fixed trunk][verified-trunk]
marking FIXED per ADT convention (still not FIXED on the branch)
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Whiteboard: [adt2 RTM][fixed trunk][verified-trunk] → [adt2 RTM]
marking VERIFIED per comment #19
Status: RESOLVED → VERIFIED
adt1.0.1+ (on ADT's behalf) approval for checkin to the 1.0 branch. pls check this in asap, then add the "fixed1.0.1" keyword.
Blocks: 143047
Keywords: adt1.0.1adt1.0.1+
*** Bug 144916 has been marked as a duplicate of this bug. ***
Keywords: verified1.0.1
*** Bug 110445 has been marked as a duplicate of this bug. ***
removing fixed 1.0.1 keyword
Keywords: fixed1.0.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: