fixes bug 136210 "cannot view any https urls when memory cache size is set to 0" r=beard sr=rpotts